# panflow

./: .gitignore  .gitlab-ci.yml  .ragignore  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  README.md  TESTING.md  cli.py  cli_migrate.py  completion_aware_launcher.py  dmg_config.py  optimized_launcher.py  panflow.spec  panflow_cli.py  panflow_launcher.py  panflow_script.sh  pyproject.toml  pytest.ini  requirements.txt  runtime_hook.py  test_bulk_update.py
.github/workflows/: build_binaries.yml
build_scripts/: build.sh  build_all_platforms.sh  build_binary.py  install.bat  install.sh
docs/: bulk_policy_ops.md  cleanup_detection.md  cli_command_migration.md  cli_command_pattern.md  cli_migration.md  cli_migration_plan.md  cli_reference.md  code_consolidation.md  custom_templates.md  deduplication.md  directory_structure.md  dynamic_xpath.md  error_handling.md  getting_started.md  graph_query_language.md  graph_query_reference.md  html_formatter_usage.md  index.md  lxml_migration_guide.md  migration_guide.md  nlq.md  object_merge_documentation.md  object_merger.md  package_consolidation_guide.md  performance_optimization.md  policy_bulk_update_capabilities.md  query_examples.md  refactoring_plan.md  refactoring_step_by_step.md  refactoring_workflow.md  reporting_consolidation.md  reporting_enhancements_plan.md  shell_completion.md  troubleshooting.md  visualization_implementation_plan.md  xml_package.md  xml_utils.md  xpath_refactor_research.md
docs/api/: index.md  unit_tests.md  xml_abstractions.md
docs/examples/: xml_abstractions.py
docs/releases/: v0.4.0_summary.md  v0.4.1_summary.md  v0.4.2_summary.md  v0.4.3_summary.md
docs/tutorials/: index.md  merging_configurations.md
examples/: cleanup_examples.md  deduplication_verbose_demo.py  graph_queries.txt  nlq_command_examples.md  policy_cli_usage_examples.md  policy_rename_examples.md  top_use_cases.md
panflow/: __init__.py
panflow/cli/: __init__.py  app.py  command_base.py  common.py  completion.py  completions.py  enhanced_command_base.py
panflow/cli/commands/: __init__.py  cleanup_commands.py  deduplicate_commands.py  merge_commands.py  nat_commands.py  nlq_commands.py  object_commands.py  object_commands_enhanced.py  object_commands_refactored.py  policy_commands.py  policy_commands_enhanced.py  query_commands.py
panflow/cli/commands/migrated/: object_add.py  object_list.py
panflow/constants/: __init__.py  common.py
panflow/core/: __init__.py  bulk_operations.py  config_loader.py  config_saver.py  conflict_resolver.py  deduplication.py  exceptions.py  feature_flags.py  graph_service.py  graph_utils.py  logging_utils.py  nat_splitter.py  object_finder.py  object_merger.py  object_validator.py  policy_merger.py  query_engine.py  query_language.py  reporting.py  template_loader.py  xml_builder.py  xml_cache.py  xml_diff.py  xml_query.py  xml_utils.py  xpath_resolver.py
panflow/core/xml/: __init__.py  base.py  builder.py  cache.py  diff.py  query.py
panflow/modules/: __init__.py  groups.py  nat_splitter.py  objects.py  policies.py  reports.py
panflow/nlq/: README.md  __init__.py  ai_processor.py  command_mapper.py  entity_extractor.py  intent_parser.py  processor.py
panflow/reporting/: __init__.py  engine.py
panflow/reporting/formatters/: __init__.py  csv.py  html.py  json.py
panflow/reporting/reports/: __init__.py  duplicate_objects.py  policy_analysis.py  unused_objects.py
panflow/templates/css/: reports.css
panflow/templates/reports/: base.html  custom_report.html  duplicate_objects.html  object_usage.html  security_policy_analysis.html  unused_objects.html
panflow/templates/reports/components/: base_template.html
panflow/templates/reports/sections/: object_section.html  policy_section.html
panflow/xpath_mappings/: panos_10_1.yaml  panos_10_2.yaml  panos_11_0.yaml  panos_11_1.yaml  panos_11_2.yaml
pyinstaller_hooks/: panflow_hooks.py
scripts/: analyze_refactoring_opportunities.py
tests/: README.md  conftest.py
tests/common/: __init__.py  base.py  benchmarks.py  compatibility_checker.py  duplication_analyzer.py  factories.py  fixtures.py
tests/fixtures/: sample_config.xml
tests/integration/: test_basic_workflow.py  test_combined_operations.py
tests/unit/: test_common_utilities.py
tests/unit/cli/: __init__.py  test_command_migration.py  test_command_pattern.py  test_enhanced_object_commands.py  test_nat_commands.py  test_refactoring_example.py  test_xml_cli_integration.py
tests/unit/core/: test_bulk_operations.py  test_bulk_operations_queries.py  test_deduplication.py  test_deduplication_verbose_output.py  test_graph_service.py  test_nat_splitter.py  test_object_finder.py  test_object_merger.py  test_reporting_package.py  test_template_rendering.py  test_xml_builder.py  test_xml_cache.py  test_xml_diff.py  test_xml_package.py  test_xml_query.py  test_xml_utils.py  test_xpath_resolver.py
tests/unit/modules/: __init__.py  test_nat_splitter.py
tests/unit/nlq/: test_bulk_operations.py  test_command_mapper.py  test_duplicate_context.py  test_entity_extractor.py
tools/: cli_command_migrator.py
