[tool.poetry]
name = "panflow"
version = "0.2.2"
description = "A comprehensive set of utilities for working with PAN-OS XML configurations"
authors = ["Anton Coleman <acoleman@paloaltonetworks.com>"]
license = "MIT"
readme = "README.md"
repository = "https://code.pan.run/gcs-automation/panflow"
keywords = ["panos", "xml", "firewall", "panorama", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Networking :: Firewalls",
]
packages = [
    { include = "panflow" }
]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.9.2"
typer = "^0.9.0"
pyyaml = "^6.0"
rich = "^13.3.5"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = {version = "^5.12.0", python = ">=3.8.0"}
mypy = "^1.3.0"
flake8 = {version = "^6.0.0", python = ">=3.8.1"}
pytest-cov = "^4.1.0"
pre-commit = {version = "^3.3.2", python = ">=3.9"}

[tool.poetry.scripts]
panflow = "panflow.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=panflow --cov-report=term-missing"