[tool.poetry]
name = "panflow"
version = "0.3.5"
description = "A comprehensive set of utilities for working with PAN-OS XML configurations"
authors = ["Anton Coleman <acoleman@paloaltonetworks.com>"]
license = "MIT"
readme = "README.md"
repository = "https://code.pan.run/gcs-automation/panflow"
keywords = ["panos", "xml", "firewall", "panorama", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Firewalls",
]
packages = [
    { include = "panflow" }
]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^4.9.3"
typer = "^0.9.0"
pyyaml = "^6.0.1"
rich = "^13.7.0"
jinja2 = "^3.1.2"
networkx = "^3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
panflow = "panflow.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=panflow --cov-report=term-missing"